--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,11 +5,12 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/content_frame"
+         android:id="@+id/frame_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ListView android:id="@+id/left_drawer"
+    <ListView
+      android:id="@+id/list_slidermenu"
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
