--- a/res/layout/messages_item.xml
+++ b/res/layout/messages_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/message_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -15,52 +14,50 @@
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:src="@drawable/unread_marker" >
+    </ImageView>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_gravity="left"
             android:layout_weight="1"
-            android:orientation="vertical" >
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/message_sender"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="sender"
                 android:textColor="@color/black"
                 android:textSize="16sp" >
             </TextView>
+
+            <TextView
+                android:id="@+id/message_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:gravity="right"
+                    android:text="date"
+                android:textColor="@color/black"
+                android:textSize="14sp" >
+            </TextView>
         </RelativeLayout>
-    </ImageView>
-
-    <TextView
-        android:id="@+id/message_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/broadcast_role"
-        android:text="Unfortunately, PreferenceFragmentCompat is missing in android support library. In this tutorial, i show you a possible implementation that you can use until Google makes its own."
-        android:textColor="@color/black"
-        android:textSize="14sp" >
-    </TextView>
-
-    <RelativeLayout>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/message_date"
-            android:layout_width="wrap_content"
+            android:id="@+id/message_message"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:gravity="right"
+            android:layout_below="@+id/broadcast_role"
+            android:text="Unfortunately, PreferenceFragmentCompat is missing in android support library. In this tutorial, i show you a possible implementation that you can use until Google makes its own."
             android:textColor="@color/black"
             android:textSize="14sp" >
         </TextView>
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
