--- a/res/layout/list_of_needs_list_item_layout.xml
+++ b/res/layout/list_of_needs_list_item_layout.xml
@@ -4,11 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="5dip" >
-
-    <!-- Title Of Request ! -->
-
-    <!-- Artist Name -->
-
+   <include layout="@layout/icon_layout_with_progres" />
     <TextView
         android:id="@+id/needs_task"
         android:layout_width="fill_parent"
