--- a/res/layout/discover_needs_map_layout.xml
+++ b/res/layout/discover_needs_map_layout.xml
@@ -4,16 +4,18 @@
     android:layout_height="match_parent"
  >
  
-    <fragment 
-        android:id="@+id/needs_map_view_map"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        class="com.google.android.gms.maps.SupportMapFragment"/>
+    <com.google.android.gms.maps.MapView
+    android:id="@+id/needs_map_view_map"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:clickable="true"
+    android:apiKey="AIzaSyA5rUkHtoPSD-gXCIvxDdlsWMDdQcVIB6s"
+/>
     
-    <Button
+   <!--   <Button
         android:id="@+id/needs_map_view_refresh_button"
         android:layout_width="fill_parent"
         android:layout_height = "200dp"
         android:text="@string/refresh_map_view"
-        />
+        />-->
 </RelativeLayout>
