--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,13 +2,13 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
@@ -17,7 +17,7 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
-        <style name="TwoWayViewBase">
+    <style name="TwoWayViewBase">
         <item name="android:background">#999999</item>
     </style>
 
@@ -30,6 +30,26 @@
         <item name="android:textColor">#ffffff</item>
         <item name="android:background">#33000000</item>
     </style>
-    
-    <style name="ProgressBarStyle" parent="@android:style/Widget.ProgressBar.Horizontal"/>
+
+    <style name="form_label">
+        <item name="android:textSize">@dimen/title_text_medium</item>
+        <item name="android:textColor">@color/form_text_color</item>
+        
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="form_bold_title" parent="form_label">
+        <item name="android:textSize">@dimen/title_text_large</item>
+    </style>
+
+    <style name="form_description" parent="form_label">
+
+        <!-- <item name="android:textStyle">bold</item> -->
+        <item name="android:textSize">@dimen/title_text_small</item>
+    </style>
+
+    <style name="ProgressBarStyle" parent="@android:style/Widget.ProgressBar.Horizontal" />
+
 </resources>
