--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -14,6 +14,12 @@
     <dimen name="staggered_child_medium">230dp</dimen>
     <dimen name="staggered_child_large">310dp</dimen>
     <dimen name="staggered_child_xlarge">400dp</dimen>
+    
+    
+    <dimen name="title_text_large">24dp</dimen>
+    <dimen name="title_text_medium">18dp</dimen>
+    <dimen name="title_text_small">12dp</dimen>
+    
 
 
 </resources>
