Finsihed most of the skeleton code

--- a/res/layout/needs_details.xml
+++ b/res/layout/needs_details.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <LinearLayout
+        android:id="@+id/buttons"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/needs_change_state"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Accept Task" />
+    </LinearLayout>
+
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/buttons" >
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -72,14 +88,14 @@
                 android:id="@+id/needs_details_location"
                 style="@style/form_description" />
 
-            <com.google.android.gms.maps.MapView
-                android:id="@+id/needs_details_map"
-                android:layout_width="fill_parent"
-                android:layout_height="400dp"
-              
-      android:enabled="true"
-                android:apiKey="AIzaSyA5rUkHtoPSD-gXCIvxDdlsWMDdQcVIB6s"
-                android:clickable="true" />
+     
+                <com.google.android.gms.maps.MapView
+        android:id="@+id/needs_details_map"
+        android:layout_width="fill_parent"
+        android:layout_height="400dp"
+        android:apiKey="AIzaSyA5rUkHtoPSD-gXCIvxDdlsWMDdQcVIB6s"
+        android:clickable="true" />
+           
 
             <TextView
                 android:id="@+id/needs_details_comments_label"
@@ -95,9 +111,9 @@
             <ListView
                 android:id="@+id/needs_details_comments_list"
                 android:layout_width="fill_parent"
-                android:layout_height="400dp" >
+                android:layout_height="200dp" >
             </ListView>
         </LinearLayout>
     </ScrollView>
 
-</LinearLayout>
+</RelativeLayout>
