--- a/res/layout/needs_comments_item_layout.xml
+++ b/res/layout/needs_comments_item_layout.xml
@@ -52,8 +52,8 @@
 
             <ImageView
                 android:id="@+id/needs_comments_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
                 android:layout_gravity="center"
                 android:layout_margin="5dip"
                 android:gravity="center"
