--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -21,5 +21,63 @@
     <dimen name="title_text_small">12dp</dimen>
     
 
+    <!-- Default -->
+    <dimen name="radius_default">3dp</dimen>
+    <dimen name="padding_default">8dp</dimen>
+    <dimen name="margin_default">5dp</dimen>
+    <dimen name="line_default">1dp</dimen>
+
+    <!-- Products -->
+    <dimen name="height_list">90dp</dimen>
+    <dimen name="size_list_image">64dp</dimen>
+    <dimen name="font_size_title">17sp</dimen>
+    <dimen name="font_size_description">15sp</dimen>
+
+    <dimen name="margin_setting">20dp</dimen>
+
+    <dimen name="font_size_new_tag">11sp</dimen>
+    <dimen name="padding_new_tag">3dp</dimen>
+
+<dimen name="day_label_text_size">11sp</dimen>
+<dimen name="all_day_bottom_margin">8dip</dimen>
+<dimen name="one_day_header_height">0dip</dimen>
+<dimen name="day_header_bottom_margin">4dip</dimen>
+<dimen name="date_header_text_size">12sp</dimen>
+<dimen name="hours_text_size">12sp</dimen>
+<dimen name="allday_text_size">12sp</dimen>
+<dimen name="ampm_text_size">10sp</dimen>
+<dimen name="day_view_event_text_size">12sp</dimen>
+<dimen name="week_view_event_text_size">12sp</dimen>
+<dimen name="event_text_vertical_margin">2dp</dimen>
+<dimen name="event_text_horizontal_margin">4dp</dimen>
+<dimen name="event_min_height">24dip</dimen>
+<!-- minimum size of hours column in day/week view -->
+<dimen name="min_hours_width">24dip</dimen>
+<!-- margins size of hours column in day/week view -->
+<dimen name="hours_left_margin">20dip</dimen>
+<dimen name="hours_right_margin">4dip</dimen>
+<!-- size of day header in day and week views -->
+<dimen name="day_header_height">16dip</dimen>
+<dimen name="widget_day_num_size">36sp</dimen>
+<dimen name="widget_day_num_top_padding">-4dip</dimen>
+<dimen name="action_bar_date_text_size">22sp</dimen>
+<dimen name="new_event_hint_text_size">12sp</dimen>
+<dimen name="edit_event_view_width">800dip</dimen>
+<dimen name="edit_event_view_padding_left">80dip</dimen>
+<dimen name="edit_event_view_padding_right">80dip</dimen>
+<dimen name="edit_reminder_min_size">36dip</dimen>
+<dimen name="event_info_text_size">14dip</dimen>
+<dimen name="event_info_desc_margin_left">0dip</dimen>
+<dimen name="event_info_desc_margin_right">0dip</dimen>
+<dimen name="event_info_padding">0dip</dimen>
+<dimen name="calendar_controls_width">280dip</dimen>
+<dimen name="min_portrait_calendar_controls_width">300dip</dimen>
+<dimen name="max_portrait_calendar_controls_width">350dip</dimen>
+<dimen name="calendar_controls_height">300dip</dimen>
+<dimen name="agenda_item_right_margin">4dip</dimen>
+<dimen name="today_icon_text_size">14sp</dimen>
+<dimen name="color_view_touch_area_increase">16dp</dimen>
+<dimen name="recurrence_picker_height">340dp</dimen>
+<dimen name="recurrence_picker_width">300dp</dimen>
 
 </resources>
