Added login and redid the landing page

--- a/res/layout/list_of_needs_list_item_layout.xml
+++ b/res/layout/list_of_needs_list_item_layout.xml
@@ -2,75 +2,69 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+
     android:orientation="horizontal"
-    android:padding="5dip" >
-   <include layout="@layout/icon_layout_with_progres" />
+   >
+ 
+    <!--  ListRow Left sied Thumbnail image -->
+    <LinearLayout android:id="@+id/thumbnail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="3dip"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/image_bg"
+        android:layout_marginRight="5dip">
+ 
+        <include layout="@layout/icon_layout_without_progres" />
+ 
+    </LinearLayout>
+ 
     <TextView
         android:id="@+id/needs_task"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dip"
-        android:text="Task"
-        android:textColor="#343434"
-        android:textSize="10dip" />
-
-    <TextView
-        android:id="@+id/needs_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/needs_task"
-        android:layout_alignParentBottom="true"
-        android:gravity="right"
-        android:text="Status"
-        android:textColor="#10bcc9"
-        android:textSize="10dip"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/needs_location"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/needs_task"
-        android:layout_below="@+id/needs_date_sent"
-        android:text="Location"
-        android:textColor="#343434"
-        android:textSize="10dip" />
-
+        android:layout_alignTop="@+id/thumbnail"
+        android:layout_toRightOf="@+id/thumbnail"
+        android:text="Rihanna Love the way lie"
+        android:textColor="#040404"
+        android:typeface="sans"
+        android:textSize="15dip"
+        android:textStyle="bold"/>
+ 
     <TextView
         android:id="@+id/needs_person"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/needs_location"
-        android:layout_below="@+id/needs_task"
-        android:text="Person"
-        android:textColor="#040404"
-        android:textSize="15dip"
-        android:textStyle="bold"
-        android:typeface="sans" />
-
+        android:layout_below="@id/needs_task"
+        android:textColor="#343434"
+        android:textSize="10dip"
+        android:layout_marginTop="1dip"
+        android:layout_toRightOf="@+id/thumbnail"
+        android:text="Just gona stand there and ..." />
+ 
+        <TextView
+        android:id="@+id/needs_date_sent"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/needs_person"
+        android:textColor="#343434"
+        android:textSize="10dip"
+        android:layout_marginTop="1dip"
+        android:layout_toRightOf="@+id/thumbnail"
+        android:text="Just gona stand there and ..." />
+    
+ 
     <TextView
         android:id="@+id/needs_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/needs_task"
-        android:layout_alignBottom="@+id/needs_task"
-        android:layout_alignRight="@+id/needs_task"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@id/needs_task"
         android:gravity="right"
-        android:text="Price"
-        android:textColor="#10bcc9"
-        android:textSize="10dip"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/needs_date_sent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/needs_person"
-        android:layout_below="@+id/needs_person"
-        android:gravity="right"
-        android:text="date"
-        android:textColor="#10bcc9"
-        android:textSize="10dip"
-        android:textStyle="bold" />
-
+        android:layout_marginRight="5dip"
+        android:textSize="20dp"
+        android:textColor="@color/green"
+        android:textStyle="bold"/>
+ 
+ 
 </RelativeLayout>
