--- a/res/layout/discover_needs_container_layout.xml
+++ b/res/layout/discover_needs_container_layout.xml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <include layout="@layout/search_bar_layout" />
+    <LinearLayout
+        android:id="@+id/buttons"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:orientation="horizontal" >
 
-    <FrameLayout
-        android:id="@+id/needs_discover_fragment_view"
+        <Button
+            android:id="@+id/needs_change_view"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Change View" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+         android:layout_above="@+id/buttons"  >
 
-</LinearLayout>
+        <include layout="@layout/search_bar_layout" />
+
+        <FrameLayout
+            android:id="@+id/needs_discover_fragment_view"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+           />
+    </LinearLayout>
+
+</RelativeLayout>
