--- a/res/layout/login_form.xml
+++ b/res/layout/login_form.xml
@@ -1,44 +1,61 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:background="@color/black"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/com_parse_ui_vertical_margin"
+    android:paddingLeft="@dimen/com_parse_ui_horizontal_margin"
+    android:paddingRight="@dimen/com_parse_ui_horizontal_margin"
+    android:paddingTop="@dimen/com_parse_ui_vertical_margin" >
+
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        layout="@layout/com_parse_ui_parse_login_app_logo" />
 
     <LinearLayout
-        android:id="@+id/login_box"
+   
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/titan_logo"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        android:paddingTop="8dip" >
+        android:layout_weight="0.5"
+        android:gravity="center"
+        android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/txtUsername"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/username"
-            android:inputType="textFilter"
-            android:padding="5dip"
-            android:singleLine="true"
-            android:textSize="20dip" />
+        <include
+            android:id="@+id/login_insert"
+            layout="@layout/com_parse_ui_parse_login_form" />
 
-        <EditText
-            android:id="@+id/txtPassword"
-            android:layout_width="fill_parent"
+        <include
+            android:id="@+id/signup_insert"
+            layout="@layout/com_parse_ui_parse_signup_form" />
+
+        <LinearLayout
+            android:id="@+id/parse_buttons"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/password"
-            android:password="true" />
+            android:layout_marginTop="@dimen/com_parse_ui_large_vertical_spacing" >
+
+            <Button
+                android:id="@+id/parse_login_button"
+                style="@style/ParseLoginUI.Button"
+                android:layout_weight="0.5"
+                android:text="@string/com_parse_ui_parse_login_button_label" />
+
+            <Button
+                android:id="@+id/parse_signup_button"
+                style="@style/ParseLoginUI.Button"
+                android:layout_marginLeft="@dimen/com_parse_ui_small_horizontal_spacing"
+                android:layout_weight="0.5"
+                android:text="@string/com_parse_ui_create_account_button_label" />
+        </LinearLayout>
+          <Button
+        android:id="@+id/parse_login_help"
+        style="@style/ParseLoginUI.HelpButton"
+        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
+        android:layout_marginBottom="@dimen/com_parse_ui_small_vertical_spacing"
+        android:text="@string/com_parse_ui_forgot_password_button_label" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/loginButton"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/login"
-        android:textSize="20dip" />
 
 </LinearLayout>
