--- a/res/layout/pull_to_refresh_swipe_list_single_list.xml
+++ b/res/layout/pull_to_refresh_swipe_list_single_list.xml
@@ -1,29 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/swipe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
->
+    android:orientation="vertical" >
 
-    
-    <com.fortysevendeg.swipelistview.SwipeListView
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <FrameLayout
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <com.fortysevendeg.swipelistview.SwipeListView
             xmlns:swipe="http://schemas.android.com/apk/res-auto"
             android:id="@+id/list"
-            android:listSelector="#00000000"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            swipe:swipeFrontView="@+id/front"
+            android:listSelector="#00000000"
             swipe:swipeBackView="@+id/back"
+            swipe:swipeCloseAllItemsWhenMoveList="true"
             swipe:swipeDrawableChecked="@drawable/choice_selected"
             swipe:swipeDrawableUnchecked="@drawable/choice_unselected"
-            swipe:swipeCloseAllItemsWhenMoveList="true"
-            swipe:swipeMode="both"
-            />
+            swipe:swipeFrontView="@+id/front"
+            swipe:swipeMode="both" />
+        
 
-</android.support.v4.widget.SwipeRefreshLayout>
+        </FrameLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
