--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,13 +2,13 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
@@ -33,7 +33,7 @@
 
     <style name="form_label">
         <item name="android:textSize">@dimen/title_text_medium</item>
-        <item name="android:textColor">@color/form_text_color</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">bold</item>
@@ -210,31 +210,46 @@
         <item name="android:visibility">gone</item>
     </style>
 
-       
-    <style name="TitleBar">
-        <item name="android:id">@+id/title_container</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:orientation">horizontal</item>
-         <item name="android:paddingTop">4dp</item>
-        <item name="android:paddingBottom">4dp</item>
+    <style name="DialogLabel">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textSize">15dp</item>
+         <item name="android:textStyle">bold</item>
     </style>
-     <style name="TitleBarOperation">
-        <item name="android:layout_width">32dip</item>
-        <item name="android:layout_height">32dip</item>
+   <style name="ParseLoginUI" />
+
+    <style name="ParseLoginUI.Button" parent="@android:style/Widget.Button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:background">
+            @drawable/com_parse_ui_parse_login_button_background_selector
+        </item>
+        <item name="android:textColor">@color/com_parse_ui_parse_login_display_text</item>
+        <item name="android:textSize">18sp</item>
     </style>
-    
-    <style name="TitleBarText">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">fill_parent</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:gravity">center_vertical</item>
-        <item name="android:textSize"> 18sp </item>
-        <item name="android:paddingLeft">12dip</item>
-        <item name="android:paddingRight">12dip</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">#ffffffff</item>
+
+    <style name="ParseLoginUI.Button.ThirdPartyLogin" parent="ParseLoginUI.Button">
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">24dp</item>
+    </style>
+
+    <style name="ParseLoginUI.HelpButton" parent="@android:style/Widget.Button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:textColor">@color/com_parse_ui_parse_login_help_button_label_selector</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="ParseLoginUI.TextView" parent="@android:style/Widget.TextView">
+        <item name="android:textColor">@color/com_parse_ui_parse_login_display_text</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="ParseLoginUI.EditText" parent="@android:style/Widget.EditText">
         <item name="android:singleLine">true</item>
-        <item name="android:ellipsize">end</item>
+        <item name="android:textColor">@color/white</item>
     </style>
-    
 </resources>
