--- a/res/layout/needs_comments_item_layout.xml
+++ b/res/layout/needs_comments_item_layout.xml
@@ -1,65 +1,67 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/needs_comments_time"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal" >
-    </TextView>
-
-    <TextView
-        android:id="@+id/needs_comments_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_margin="5dip"
-        android:gravity="right"
-        android:textColor="@android:color/primary_text_light" />
-
-    <!-- Right Hand side -->
+    android:orientation="horizontal" >
 
     <LinearLayout
-        android:id="@+id/message_other_person_wrapper"
+        android:id="@+id/main_message_body"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:gravity="right"
         android:orientation="horizontal" >
 
+        <ImageView
+            android:id="@+id/needs_comments_image"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_gravity="center"
+            android:layout_margin="5dip"
+            android:gravity="center"
+            android:paddingLeft="10dip"
+          />
+
         <LinearLayout
-            android:id="@+id/comment_text_bubble"
+            android:id="@+id/alert_layout_body"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|left"
-            android:gravity="center"
-            android:orientation="vertical" >
-
-            <TextView
+            android:layout_weight="3"
+            android:orientation="vertical"
+            android:padding="5dp" >
+   <TextView
                 android:id="@+id/needs_comments_message"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dip"
-                android:gravity="center"
-                android:paddingLeft="10dip"
-                android:text="4"
-                android:textColor="@color/black"
-                android:visibility="visible" />
+                android:textSize="14sp"
+                >
+            </TextView>
+            
+            <TextView
+                android:id="@+id/needs_comments_name"
+                
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:textStyle="bold" >
+            </TextView>
 
-            <ImageView
-                android:id="@+id/needs_comments_image"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_gravity="center"
-                android:layout_margin="5dip"
-                android:gravity="center"
-                android:paddingLeft="10dip" >
-            </ImageView>
+         
+            <TextView
+                android:id="@+id/needs_comments_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="14sp" >
+            </TextView>
         </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/throbber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_popup_sync_1"
+        android:visibility="gone" />
+
+</FrameLayout>
