--- a/res/layout/discover_needs_container_layout.xml
+++ b/res/layout/discover_needs_container_layout.xml
@@ -4,26 +4,20 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:id="@+id/buttons"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:orientation="horizontal" >
 
         <Button
+            style="@style/ButtonBottom"
+              android:layout_alignParentBottom="true"
+        android:gravity="center"
             android:id="@+id/needs_change_view"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
             android:text="Change View" />
-    </LinearLayout>
-
+ 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
-         android:layout_above="@+id/buttons"  >
+         android:layout_above="@+id/needs_change_view"  >
 
         <include layout="@layout/search_bar_layout" />
 
