--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -160,10 +160,10 @@
 <color name="recurrence_picker_background">#fff2f2f2</color>
 <color name="recurrence_bubble_text_normal">#ff737373</color>
 
-    <color name="com_parse_ui_parse_login_button">#40CCCCCC</color>
-    <color name="com_parse_ui_parse_login_button_push">#30CCCCCC</color>
-    <color name="com_parse_ui_parse_login_button_focus">#35CCCCCC</color>
-    <color name="com_parse_ui_parse_login_help_button_label">#E0E0E0</color>
+    <color name="com_parse_ui_parse_login_button">#E96632</color>
+    <color name="com_parse_ui_parse_login_button_push">#D96632</color>
+    <color name="com_parse_ui_parse_login_button_focus">#F27525</color>
+    <color name="com_parse_ui_parse_login_help_button_label">@android:color/black</color>
     <color name="com_parse_ui_parse_login_help_button_label_push">#AAAAAA</color>
     <color name="com_parse_ui_parse_login_help_button_label_focus">#CCCCCC</color>
     <color name="com_parse_ui_parse_login_text_hint">#AAAAAA</color>
@@ -174,5 +174,7 @@
     <color name="com_parse_ui_twitter_login_button">#2DAAE2</color>
     <color name="com_parse_ui_twitter_login_button_push">#2588B5</color>
     <color name="com_parse_ui_twitter_login_button_focus">#2788BE</color>
+    
+    <color name="nearlings_theme">#E96632</color>
 
 </resources>
