--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,20 +1,17 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
     </style>
 
-    <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    <style name="MyActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
+        <item name="android:background">@color/nearlings_theme</item>
+        <item name="titleTextStyle">@style/MyActionBar.TitleText</item>
+        <item name="android:titleTextStyle">@style/MyActionBar.TitleText</item>
+    </style>
+
+    <style name="MyActionBar.TitleText" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="TwoWayViewBase">
@@ -214,16 +211,15 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textSize">15dp</item>
-         <item name="android:textStyle">bold</item>
+        <item name="android:textStyle">bold</item>
     </style>
-   <style name="ParseLoginUI" />
+
+    <style name="ParseLoginUI" />
 
     <style name="ParseLoginUI.Button" parent="@android:style/Widget.Button">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">48dp</item>
-        <item name="android:background">
-            @drawable/com_parse_ui_parse_login_button_background_selector
-        </item>
+        <item name="android:background">            @drawable/com_parse_ui_parse_login_button_background_selector</item>
         <item name="android:textColor">@color/com_parse_ui_parse_login_display_text</item>
         <item name="android:textSize">18sp</item>
     </style>
@@ -251,4 +247,14 @@
     <style name="ParseLoginUI.EditText" parent="@android:style/Widget.EditText">
         <item name="android:singleLine">true</item>
     </style>
+
+    <style name="ButtonBottom" parent="ParseLoginUI.Button">
+        <item name="android:layout_marginLeft">-5dip</item>
+        <item name="android:layout_marginRight">-5dip</item>
+        <item name="android:layout_marginTop">-5dip</item>
+        <item name="android:height">48dip</item>
+        <item name="android:layout_marginBottom">-5dip</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
